docs-archive/apache-airflow-providers-sftp/2.4.1/_sources/_api/airflow/providers/sftp/hooks/sftp/index.rst.txt
:py:mod:`airflow.providers.sftp.hooks.sftp`
===========================================

.. py:module:: airflow.providers.sftp.hooks.sftp

.. autoapi-nested-parse::

   This module contains SFTP hook.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.sftp.hooks.sftp.SFTPHook




.. py:class:: SFTPHook(ssh_conn_id: Optional[str] = 'sftp_default', *args, **kwargs)

   Bases: :py:obj:`airflow.providers.ssh.hooks.ssh.SSHHook`

   This hook is inherited from SSH hook. Please refer to SSH hook for the input
   arguments.

   Interact with SFTP.

   :Pitfalls::

       - In contrast with FTPHook describe_directory only returns size, type and
         modify. It doesn't return unix.owner, unix.mode, perm, unix.group and
         unique.
       - retrieve_file and store_file only take a local full path and not a
          buffer.
       - If no mode is passed to create_directory it will be created with 777
         permissions.

   Errors that may occur throughout but should be handled downstream.

   For consistency reasons with SSHHook, the preferred parameter is "ssh_conn_id".
   Please note that it is still possible to use the parameter "ftp_conn_id"
   to initialize the hook, but it will be removed in future Airflow versions.

   :param ssh_conn_id: The :ref:`sftp connection id<howto/connection:sftp>`
   :type ssh_conn_id: str
   :param ftp_conn_id (Outdated): The :ref:`sftp connection id<howto/connection:sftp>`
   :type ftp_conn_id: str

   .. py:attribute:: conn_name_attr
      :annotation: = ssh_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = sftp_default

      

   .. py:attribute:: conn_type
      :annotation: = sftp

      

   .. py:attribute:: hook_name
      :annotation: = SFTP

      

   .. py:method:: get_ui_field_behaviour() -> Dict
      :staticmethod:

      Returns custom field behaviour


   .. py:method:: get_conn(self) -> pysftp.Connection

      Returns an SFTP connection object


   .. py:method:: close_conn(self) -> None

      Closes the connection


   .. py:method:: describe_directory(self, path: str) -> Dict[str, Dict[str, str]]

      Returns a dictionary of {filename: {attributes}} for all files
      on the remote system (where the MLSD command is supported).

      :param path: full path to the remote directory
      :type path: str


   .. py:method:: list_directory(self, path: str) -> List[str]

      Returns a list of files on the remote system.

      :param path: full path to the remote directory to list
      :type path: str


   .. py:method:: create_directory(self, path: str, mode: int = 777) -> None

      Creates a directory on the remote system.

      :param path: full path to the remote directory to create
      :type path: str
      :param mode: int representation of octal mode for directory


   .. py:method:: delete_directory(self, path: str) -> None

      Deletes a directory on the remote system.

      :param path: full path to the remote directory to delete
      :type path: str


   .. py:method:: retrieve_file(self, remote_full_path: str, local_full_path: str) -> None

      Transfers the remote file to a local location.
      If local_full_path is a string path, the file will be put
      at that location

      :param remote_full_path: full path to the remote file
      :type remote_full_path: str
      :param local_full_path: full path to the local file
      :type local_full_path: str


   .. py:method:: store_file(self, remote_full_path: str, local_full_path: str) -> None

      Transfers a local file to the remote location.
      If local_full_path_or_buffer is a string path, the file will be read
      from that location

      :param remote_full_path: full path to the remote file
      :type remote_full_path: str
      :param local_full_path: full path to the local file
      :type local_full_path: str


   .. py:method:: delete_file(self, path: str) -> None

      Removes a file on the FTP Server

      :param path: full path to the remote file
      :type path: str


   .. py:method:: get_mod_time(self, path: str) -> str

      Returns modification time.

      :param path: full path to the remote file
      :type path: str


   .. py:method:: path_exists(self, path: str) -> bool

      Returns True if a remote entity exists

      :param path: full path to the remote file or directory
      :type path: str


   .. py:method:: get_tree_map(self, path: str, prefix: Optional[str] = None, delimiter: Optional[str] = None) -> Tuple[List[str], List[str], List[str]]

      Return tuple with recursive lists of files, directories and unknown paths from given path.
      It is possible to filter results by giving prefix and/or delimiter parameters.

      :param path: path from which tree will be built
      :type path: str
      :param prefix: if set paths will be added if start with prefix
      :type prefix: str
      :param delimiter: if set paths will be added if end with delimiter
      :type delimiter: str
      :return: tuple with list of files, dirs and unknown items
      :rtype: Tuple[List[str], List[str], List[str]]


   .. py:method:: test_connection(self) -> Tuple[bool, str]

      Test the SFTP connection by checking if remote entity '/some/path' exists



